serious changes omg

--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,12 @@ __pycache__/
 *$py.class
 imgdata/
 YearbookENTC/
-src/static/pranjaliphalke
-src/static/*.jpg
-src/static/*.png
-src/static/*.jpeg
-src/static/pranjaliphalke
+static/pranjaliphalke
+static/*.jpg
+static/*.png
+static/*.jpeg
+static/pranjaliphalke
+static/img
 .vscode/
 # C extensions
 *.so
